--- a/filtro.html
+++ b/filtro.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- //corresion de enlace filtro -->
   <link rel="stylesheet" href="filtro.css">
   <title>Filtros en JS</title>
 </head>
@@ -18,7 +19,11 @@
       <div id="lista-de-productos">
     </div>
   </div>
-  <script src="../filtro.js"></script>
+  <!-- //corresion de enlace filtro -->
+  <script src="filtro.js"></script>
 </body>
 
 </html>
+
+<!-- verificar el correcto enlace de js y css -->
+ <!-- error en li.appendChild --> muestra que no es una funcion -->
